# GlogTest

./: CMakeLists.txt  CMakePresets.json  main.cpp
android/: CMakeLists.txt  gradle.properties  key0-123456.jks  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/github/huangqinjin/glogtest/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/github/huangqinjin/glogtest/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/github/huangqinjin/glogtest/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
libs/: .gitignore  CMakeLists.txt  patch.cmake
libs/patches/: gflags-do-not-export-multiple-times.patch
startup/: CMakeLists.txt  jni.cpp  main.cpp  redirect.c  redirect.h
